--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ show_excerpts: True # set to true to show excerpts on the homepage
 theme: minima
 minima:
   date_format: "%b %-d, %Y"
-  skin: light
+  skin: dark
 
 
 
