--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: 2021 STUDIO RECORD about Custome tiny house Ⅰ
+title: COLLECTION ABOUT IDEAS AND LIFE
 author:
   name: Henry Liu (Yonghao Liu)
   email: liuyon@kean.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  This is the record of 2021 studio course
+  This is the record of studio courses and some flash ideas.
 
 show_excerpts: True # set to true to show excerpts on the homepage
 
